--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -1,33 +1,3 @@
-<template>
-  <div id="app">
-    <Header/>
-    <router-view/>
-    <Footer/>
-  </div>
-</template>
-
-<script>
-// Interessante *___*
-import Header from '@/components//header/Header.vue'
-import Footer from '@/components/footer/Footer.vue'
-
-export default {
-  name: 'App',
-
-  data () {
-    return {
-      var: 'app vars aqui'
-    }
-  },
-
-  components: {
-    Header,
-    Footer
-  }
-}
-</script>
-
-<style>
   @font-face {
     src: url("./assets/fonts/Gilroy-Regular.ttf") format("truetype");
     font-family: "Gilroy-Regular";
@@ -44,9 +14,20 @@ export default {
     src: url("./assets/fonts/Gilroy-Bold.ttf") format("truetype");
     font-family: "Gilroy-Bold";
   }
-  body {
-    /* font-family: Gilroy-Light; */
+  .g_regular{
     font-family: Gilroy-Regular;
+    font-weight: 400;
+  }
+  .g_medium{
+    font-family: Gilroy-Medium;
+    font-weight: 400;
+  }
+  .g_bold{
+    font-family: Gilroy-Bold;
+    font-weight: 400;
+  }
+  body {
+    font-family: Gilroy-Light;
     font-size: 16px;
     color: #4c6173;
     /* line-height: 1;
@@ -65,7 +46,6 @@ export default {
       vertical-align: baseline; */
   }
   img {
-    /* max-width: 100%; */
     vertical-align: middle;
   }
   a, button{
@@ -117,4 +97,3 @@ export default {
     font-size: inherit;
     font-family: inherit;
   }
-</style>
